--- a/app/styles.css
+++ b/app/styles.css
@@ -1,3 +1,13 @@
 .price {
     float: right;
 }
+
+.km-listview .km-button.delete {
+    display: none;
+    position: absolute;
+    top: 0;
+    right: .5em;
+    width: 60px;
+    background-color: #bd2729;
+    color: #fff;
+}
